Fixed sign up process.

--- a/Wigo/Wigo-Info.plist
+++ b/Wigo/Wigo-Info.plist
@@ -2,14 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>remote-notification</string>
-	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>WiGo</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
@@ -38,7 +34,7 @@
 	<key>FacebookAppID</key>
 	<string>661589153895742</string>
 	<key>FacebookDisplayName</key>
-	<string>wigo</string>
+	<string>WiGo</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIAppFonts</key>
@@ -47,6 +43,10 @@
 		<string>Whitney-Medium.ttf</string>
 		<string>Whitney-Light.ttf</string>
 		<string>Whitney-LightSC.ttf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
 	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
