--- a/wigoBlade.plist
+++ b/wigoBlade.plist
@@ -5,11 +5,11 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>WiGo</string>
+	<string>WiGo Blade</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.whoisgoingout.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>net.blade.wigo</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
