--- a/Wigo.xcodeproj/xcshareddata/xcschemes/Wigo.xcscheme
+++ b/Wigo.xcodeproj/xcshareddata/xcschemes/Wigo.xcscheme
@@ -90,7 +90,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Distribution"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
