Transition to The confirmation screen look good. The allow button now works all the time and the mobile contacts are sorted and UI is good. Searching is enabled. People with no names or phones are not added to the list.

--- a/Wigo/Wigo-Info.plist
+++ b/Wigo/Wigo-Info.plist
@@ -54,6 +54,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>WhitneyNumeric-Light.ttf</string>
+		<string>Whitney-Bold.ttf</string>
 		<string>Whitney-MediumSC.ttf</string>
 		<string>Whitney-Medium.ttf</string>
 		<string>Whitney-Light.ttf</string>
