fixed profile, edit, chat, vcs to work with new design

--- a/Wigo/Wigo-Info.plist
+++ b/Wigo/Wigo-Info.plist
@@ -84,5 +84,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
