--- a/Wigo/wigoBlade.plist
+++ b/Wigo/wigoBlade.plist
@@ -84,5 +84,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
