--- a/Wigo.xcodeproj/xcshareddata/xcschemes/wigoBlade.xcscheme
+++ b/Wigo.xcodeproj/xcshareddata/xcschemes/wigoBlade.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "C12A110619787BE700D53B1C"
-               BuildableName = "WiGo.app"
+               BuildableName = "Wigo.app"
                BlueprintName = "wigoBlade"
                ReferencedContainer = "container:Wigo.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "C12A110619787BE700D53B1C"
-            BuildableName = "WiGo.app"
+            BuildableName = "Wigo.app"
             BlueprintName = "wigoBlade"
             ReferencedContainer = "container:Wigo.xcodeproj">
          </BuildableReference>
@@ -52,7 +52,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "C12A110619787BE700D53B1C"
-            BuildableName = "WiGo.app"
+            BuildableName = "Wigo.app"
             BlueprintName = "wigoBlade"
             ReferencedContainer = "container:Wigo.xcodeproj">
          </BuildableReference>
@@ -70,7 +70,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "C12A110619787BE700D53B1C"
-            BuildableName = "WiGo.app"
+            BuildableName = "Wigo.app"
             BlueprintName = "wigoBlade"
             ReferencedContainer = "container:Wigo.xcodeproj">
          </BuildableReference>
