Most of the private stuff is fixed.

--- a/Wigo/Wigo-Info.plist
+++ b/Wigo/Wigo-Info.plist
@@ -59,6 +59,7 @@
 		<string>Whitney-Medium.ttf</string>
 		<string>Whitney-Light.ttf</string>
 		<string>Whitney-LightSC.ttf</string>
+		<string>Whitney-Semibold.ttf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
